--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.QuickFlixKT" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/accent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Colors -->
+        <item name="default_color">@color/black</item>
+        <item name="default_color_secondary">@color/default_color_secondary_dark</item>
+        <item name="default_text_color">@color/white</item>
+        <item name="accent_color">@color/accent</item>
+        <item name="separator_view_color">@color/separator_gray</item>
+        <item name="picture_background_color">@color/default_color_secondary_dark</item>
     </style>
 </resources>
