--- a/app/src/main/res/layout/actor_row.xml
+++ b/app/src/main/res/layout/actor_row.xml
@@ -12,18 +12,42 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:background="@drawable/actor_image_clipper"
-        app:clipToOutline="@{true}">
+        android:orientation="vertical"
+        android:padding="5dp">
 
-        <ImageView
-            android:id="@+id/trending_movie_image"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/movie_thumbnail"
-            app:imageUrl="@{actor.profile_path}"
-            tools:src="@tools:sample/backgrounds/scenic"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/actor_image_clipper"
+            app:clipToOutline="@{true}">
 
+            <ImageView
+                android:id="@+id/trending_movie_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/movie_thumbnail"
+                app:imageUrl="@{actor.profile_path}"
+                tools:src="@tools:sample/backgrounds/scenic"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="@{actor.name}"
+            style="@style/MovieTextView" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="@{actor.character}" />
     </LinearLayout>
 </layout>
