--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,93 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.MovieFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
+    <data>
+        <import type="com.example.quickflixkt.utility.LoadStatus" />
+        <variable
+            name="movieViewModel"
+            type="com.example.quickflixkt.viewmodels.MoviesViewModel" />
+
+        <variable
+            name="movieCreditsViewModel"
+            type="com.example.quickflixkt.viewmodels.MovieCreditsViewModel" />
+
+        <variable
+            name="similarMoviesViewModel"
+            type="com.example.quickflixkt.viewmodels.SimilarMoviesViewModel" />
+
+        <variable
+            name="holderText"
+            type="String" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="match_parent"
+        tools:context=".fragments.MovieFragment">
 
         <LinearLayout
+            android:id="@+id/error_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:visibility="@{movieViewModel.status != LoadStatus.LOADING &amp;&amp; movieViewModel.movie == null}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
-                android:id="@+id/movie_image"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:contentDescription="@string/top_movie_image"/>
+                android:id="@+id/error_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/error_image" />
 
             <TextView
-                android:id="@+id/movie_name"
+                android:id="@+id/error_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Movie Name"/>
-
-            <TextView
-                android:id="@+id/movie_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Movie Name"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/release_year"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="15dp"
-                    android:gravity="end"
-                    android:text="7.8"/>
-
-                <TextView
-                    android:id="@+id/rating"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="0dp"
-                    android:text="7.8"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/credit_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Credits"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/credit_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/similar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Similar Movies"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/similar_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:padding="40dp"
+                android:gravity="center"
+                android:text="@string/movie_error_message"
+                style="@style/ErrorTextView"/>
 
         </LinearLayout>
 
-    </ScrollView>
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            app:visibility="@{movieViewModel.status == LoadStatus.LOADING &amp;&amp; movieViewModel.movie == null}" />
 
-</LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            app:visibility="@{movieViewModel.movie != null}">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/general_padding"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/general_padding"
+                    android:layout_marginEnd="@dimen/general_padding"
+                    android:background="@drawable/movies_image_clipper"
+                    app:clipToOutline="@{true}">
+
+                    <ImageView
+                        android:id="@+id/movie_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        android:contentDescription="@string/top_movie_image"
+                        app:imageUrl="@{movieViewModel.movie.backdrop_path}"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/movie_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/section_padding"
+                    android:layout_marginStart="@dimen/general_padding"
+                    android:layout_marginEnd="@dimen/general_padding"
+                    android:text="@{movieViewModel.movie.title}"
+                    style="@style/HeaderTextView"/>
+
+                <TextView
+                    android:id="@+id/movie_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/same_section_padding"
+                    android:layout_marginStart="@dimen/general_padding"
+                    android:layout_marginEnd="@dimen/general_padding"
+                    android:text="@{movieViewModel != null ? movieViewModel.movie.overview : holderText}"
+                    style="@style/DescriptionTextView"/>
+
+                <TextView
+                    android:id="@+id/credit_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/section_padding"
+                    android:layout_marginStart="@dimen/general_padding"
+                    android:layout_marginEnd="@dimen/general_padding"
+                    android:text="@string/credits"
+                    style="@style/HeaderTextView"/>
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/recycler_view_progressbar_and_error_margin"
+                    android:layout_gravity="center"
+                    app:visibility="@{movieCreditsViewModel.status == LoadStatus.LOADING &amp;&amp; movieCreditsViewModel.movieCredits.size() == 0}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/recycler_view_progressbar_and_error_margin"
+                    android:text="@{@string/movie_credits_error(movieViewModel.movie.title)}"
+                    app:visibility="@{movieCreditsViewModel.status != LoadStatus.LOADING &amp;&amp; movieCreditsViewModel.movieCredits.size() == 0}"
+                    app:layout_constraintTop_toBottomOf="@id/movies_by"
+                    app:layout_constraintStart_toStartOf="parent"
+                    style="@style/ErrorTextView"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/credit_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:layout_marginTop="@dimen/same_section_padding"
+                    android:layout_marginBottom="@dimen/no_padding"
+                    android:paddingStart="@dimen/general_padding"
+                    android:paddingEnd="@dimen/general_padding"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:spanCount="3"
+                    app:movieCreditsListData="@{movieCreditsViewModel.movieCredits}"
+                    app:visibility="@{movieCreditsViewModel.movieCredits.size() != 0}"
+                    tools:itemCount="6"
+                    tools:listitem="@layout/actor_row" />
+
+                <TextView
+                    android:id="@+id/similar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/section_padding"
+                    android:layout_marginStart="@dimen/general_padding"
+                    android:layout_marginEnd="@dimen/general_padding"
+                    android:text="@string/similar_movies"
+                    style="@style/HeaderTextView"/>
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/recycler_view_progressbar_and_error_margin"
+                    android:layout_gravity="center"
+                    app:visibility="@{similarMoviesViewModel.status == LoadStatus.LOADING &amp;&amp; similarMoviesViewModel.similarMovies.size() == 0}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/recycler_view_progressbar_and_error_margin"
+                    android:text="@{@string/similar_movies_error(movieViewModel.movie.title)}"
+                    app:visibility="@{similarMoviesViewModel.status != LoadStatus.LOADING &amp;&amp; similarMoviesViewModel.similarMovies.size() == 0}"
+                    app:layout_constraintTop_toBottomOf="@id/movies_by"
+                    app:layout_constraintStart_toStartOf="parent"
+                    style="@style/ErrorTextView"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/similar_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/same_section_padding"
+                    android:layout_marginBottom="@dimen/recycler_view_progressbar_and_error_margin"
+                    android:paddingStart="@dimen/general_padding"
+                    android:paddingEnd="@dimen/general_padding"
+                    android:clipToPadding="false"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:similarMovieListData="@{similarMoviesViewModel.similarMovies}"
+                    app:visibility="@{similarMoviesViewModel.similarMovies.size() != 0}"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/similar_movies_row"/>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </RelativeLayout>
+</layout>
