--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="default_color_secondary_light">#FFF6F1F8</color>
     <color name="default_color_secondary_dark">#FF242426</color>
     <color name="separator_gray">#FFBFD6D5</color>
+    <color name="teal">#008577</color>
 </resources>
